Fixed overflow in KaTeX math displays

--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -19,7 +19,7 @@ article {
     }
 
     // make overflowing equations scrollable
-    > .katex-display {
+    .katex-display {
         overflow-x: auto;
     }
 
